<resources>
    <string name="app_name">PasswordRecorder</string>
    <string name="FrontPage_Hello">Hello</string>
    <string name="addInfo_Hint">Add Info</string>
    <string name="viewInfo_Hint">View &amp; Copy &amp; Share Info</string>
    <string name="manageInfo_Btn">Manage Info</string>
    <string name="searchInfo_Btn">Search Info</string>
    <string name="addInPage_Hint">Must input with star sign</string>
    <string name="Username_Title">Username: (*)</string>
    <string name="Username_Hint">Input username here</string>
    <string name="Password_Title">Password: (*)</string>
    <string name="PasswordHint">Input password here</string>
    <string name="Register_Place_Title">Register Place: (*)</string>
    <string name="Register_Place_Hint">Input other place here</string>
    <string name="PhoneNumber_Title">Phone number:</string>
    <string name="PhoneNumber_Hint">Input phone number here</string>
    <string name="OtherInfo_Title">Comments:</string>
    <string name="OtherInfo_Hint">Input comments here</string>
    <string name="Exists_Hint">Info already Exists</string>
    <string name="ViewEdit_Title">View &amp; Copy &amp; Share the Info</string>
    <string name="ViewEdit_Hint">Long click to check details</string>
    <string name="ViewEdit_Username">Username: </string>
    <string name="ViewEdit_Register">Register place: </string>
    <string name="ViewEdit_Date">Add in date: </string>
    <string name="ViewEdit_Password">Password: </string>
    <string name="CopyData_Title">Your Data Details: </string>
    <string name="Manage_Title">Manage the Info</string>
    <string name="Manage_Hint">Long click to check details</string>
    <string name="Delete_Hint">Are you sure you want to delete this?</string>
    <string name="Modify_Title">Modify your information here</string>
    <string name="Copy_Btn">Copy</string>
    <string name="Back_Btn">Back</string>
    <string name="Share_Btn">Share</string>
    <string name="Save_Btn">Save</string>
    <string name="Delete_Btn">Delete</string>
    <string name="Modify_Btn">Modify</string>
    <string name="SearchInfo_Title">Search Info Page</string>
    <string name="SearchInfo_Hint">Select Search by what and click search button</string>
    <string name="SearchInfoHint">Enter search detail</string>
    <string name="SearchInfo_DatePicker">click to chose date</string>
    <string name="Search_Btn">Search</string>
    <string name="SearchInfo_Result">Result list</string>
    <string name="exit_hint">Double back to exit</string>
    <string name="ExistInfo_Hint">You have %1$s in database</string>
    <string name="Backup_Btn">Backup</string>
    <string name="Restore_Btn">Restore</string>
    <string name="Backup_Restore_Btn">Backup &amp; Restore</string>
    <string name="QRCode_hint">Your QRCode is ready</string>
    <string-array name="register_Place">
        <item>Google</item>
        <item>Facebook</item>
        <item>Outlook</item>
        <item>Itunes</item>
        <item>Amazon</item>
        <item>QQ</item>
        <item>163mail</item>
        <item>Wechat</item>
        <item>Sina</item>
        <item>Baidu</item>
        <item>Github</item>
        <item>blizzard</item>
        <item>Steam</item>
        <item>Netease</item>
        <item>other</item>
    </string-array>
    <string-array name="search_category">
        <item>username</item>
        <item>register place</item>
        <item>phone number</item>
        <item>add in date</item>
    </string-array>
</resources>