<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TV_FrontHint_Main"
        android:text="@string/FrontPage_Hello"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/BT_AddInfo_Main"
        android:layout_below="@id/TV_FrontHint_Main"
        android:text="@string/addInfo_Hint"
        android:background="@android:color/holo_blue_light"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/BT_View_Mod_Info"
        android:layout_below="@id/BT_AddInfo_Main"
        android:text="@string/viewInfo_Hint"
        android:background="@android:color/holo_blue_light"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/BT_Manage_Main"
        android:layout_below="@id/BT_View_Mod_Info"
        android:text="@string/manageInfo_Btn"
        android:background="@android:color/holo_blue_light"/>


</RelativeLayout>